src/test/ui/nll/generator-upvar-mutability.stderr
error[E0594]: cannot assign to immutable item `x`
  --> $DIR/generator-upvar-mutability.rs:18:9
   |
LL |         x = 1;
   |         ^^^^^ cannot assign

error: aborting due to previous error

For more information about this error, try `rustc --explain E0594`.
